--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "gtfs-realtime-bindings>=1.0.0",
+    "luma-oled>=3.14.0",
+    "requests>=2.32.3",
+    "timeloop>=1.0.2",
     "whenever>=0.6.17",
+    "xmltodict>=0.14.2",
 ]
